# tori

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  mkdocs.yaml  search.html  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  rust.yml
configuration/: index.html
contrib/: pack-aur.py  tori.desktop
docs/: configuration.md  getting_started.md  index.md  troubleshooting.md
getting_started/: index.html
search/: search_index.json
src/: command.rs  config.rs  dbglog.rs  default_config.yaml  events.rs  lib.rs  main.rs  rect_ops.rs  shortcuts.rs  util.rs
src/app/: app_screen.rs  component.rs  event_channel.rs  filtered_list.rs  mod.rs  modal.rs  notification.rs  playlist_management.rs  popup.rs  shortcuts.rs
src/app/app_screen/: mod.rs  now_playing.rs
src/app/browse_screen/: add.rs  mod.rs  now_playing.rs  playlists.rs  songs.rs
src/app/modal/: confirmation_modal.rs  help_modal.rs  hotkey_modal.rs  input_modal.rs  mod.rs
src/app/playlist_screen/: centered_list.rs  mod.rs
src/config/: mod.rs  shortcuts.rs
src/m3u/: mod.rs  parser.rs  playlist_management.rs  stringreader.rs
src/player/: mod.rs  mpv.rs
src/player/mpv/: mod.rs  select.rs
src/player/symphonia/: controller.rs  mod.rs  output.rs  resampler.rs  source.rs
src/player/symphonia/controller/: file_source.rs  mod.rs  ytdlp_source.rs
src/player/symphonia/source/: file_source.rs  mod.rs  pcm_decoder.rs  ytdlp_source.rs
src/visualizer/: mod.rs
src/widgets/: mod.rs  notification.rs  scrollbar.rs
src/widgets/modal/: confirmation_modal.rs  help_modal.rs  input_modal.rs  mod.rs
style/: extra.css
tori/: Cargo.toml  README.md  build.rs
tori-player/: Cargo.toml
tori-player/src/: lib.rs  output.rs  resampler.rs  source.rs
tori-player/src/controller/: mod.rs
tori/src/: color.rs  dbglog.rs  default_config.yaml  events.rs  input.rs  lib.rs  main.rs  rect_ops.rs  util.rs
tori/src/app/: component.rs  filtered_list.rs  mod.rs
tori/src/app/app_screen/: mod.rs  now_playing.rs
tori/src/app/browse_screen/: mod.rs  playlists.rs  songs.rs
tori/src/app/modal/: confirmation_modal.rs  help_modal.rs  hotkey_modal.rs  input_modal.rs  mod.rs
tori/src/app/playlist_screen/: mod.rs
tori/src/component/: mod.rs  notification.rs  now_playing.rs  visualizer.rs
tori/src/config/: mod.rs  shortcuts.rs
tori/src/events/: action.rs  channel.rs  command.rs  mod.rs
tori/src/m3u/: playlist_management.rs  stringreader.rs
tori/src/player/: mod.rs  rodio.rs  tori_player_glue.rs
tori/src/player/mpv/: mod.rs  select.rs
tori/src/player/symphonia/: source.rs
tori/src/player/symphonia/controller/: mod.rs
tori/src/state/: browse_screen.rs  mod.rs
tori/src/ui/: eventful_widget.rs  list.rs  mod.rs
tori/src/update/: browse_screen.rs  mod.rs
tori/src/visualizer/: mod.rs
tori/src/widgets/: eventful_widget.rs  mod.rs  notification.rs
troubleshooting/: index.html
