[package]
name = "tori"
description = "The frictionless music player for the terminal"
authors = ["Leonardo Riether <riether.leonardo@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LeoRiether/tori"
homepage = "https://github.com/LeoRiether/tori"
keywords = ["music", "player", "tui", "terminal"]
exclude = ["assets", "docs"]
version = "0.2.3"
edition = "2021"
build = "build.rs"

[package.metadata]
depends = ["mpv", "pipewire"]
optdepends = ["yt-dlp", "cava"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.69.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
no-default-features = true # do not build with `clipboard` because that breaks the docs.rs build...

[features]
default = ["clip", "mpv"]
clip = ["clipboard"]
mpv = ["mpv034", "mpv035", "libmpv-sys"]

[dependencies]
tui = { version = "0.21", package = "ratatui" }
crossterm = "0.26"

# clipboard is optional because docs.rs doesn't build the xcb="0.8" dependency
# also because I couldn't make any other clipboard crate work
clipboard = { version = "0.5.0", optional = true }

serde_json = "1.0.94"
unicode-width = "0.1.10"
dirs = "5.0.0"
serde_yaml = "0.9.19"
webbrowser = "0.8.8"
serde = { version = "1.0.159", features = ["derive"] }
once_cell = "1.17.1"
argh = "0.1.10"
lofty = "0.13.0"
rand = "0.8.5"

log = "0.4.19"
pretty_env_logger = "0.5.0"

# Player: mpv
libmpv-sys = { version = "3.1.0", optional = true }
mpv034 = { version = "2.0.1", package = "libmpv", optional = true } # Works with mpv <= v0.34
mpv035 = { version = "2.0.2-fork.1", package = "libmpv-sirno", optional = true } # Works with mpv v0.35

[build-dependencies]
winres = "0.1"

