[package]
name = "tori"
description = "The frictionless music player for the terminal"
authors = ["Leonardo Riether <riether.leonardo@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LeoRiether/tori"
homepage = "https://github.com/LeoRiether/tori"
keywords = ["music", "player", "tui", "terminal"]
exclude = ["../assets", "../docs"] # not sure if I need these anymore
version = "0.2.6"
edition = "2021"
build = "build.rs"

[package.metadata]
depends = ["mpv", "pipewire"]
optdepends = ["yt-dlp", "cava"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
no-default-features = true # do not build with `clipboard` because that breaks the docs.rs build...

[features]
default = ["clip", "mpv"]
clip = ["clipboard"]
mpv = ["mpv034", "mpv035", "libmpv-sys"]
tori-player = ["dep:tori-player"]

[dependencies]
tui = { version = "0.25", package = "ratatui" }
crossterm = "0.27"

# clipboard is optional because docs.rs doesn't build the xcb="0.8" dependency
# also because I couldn't make any other clipboard crate work
clipboard = { version = "0.5.0", optional = true }

serde_json = "1.0.94"
unicode-width = "0.1.10"
dirs = "5.0.0"
serde_yaml = "0.9.31"
webbrowser = "0.8.12"
serde = { version = "1.0.196", features = ["derive"] }
once_cell = "1.19.0"
argh = "0.1.12"
lofty = "0.18.2"
rand = "0.8.5"

log = "0.4.19"
pretty_env_logger = "0.5.0"

# Player: mpv
libmpv-sys = { version = "3.1.0", optional = true }
mpv034 = { version = "2.0.1", package = "libmpv", optional = true } # Works with mpv <= v0.34
mpv035 = { version = "2.0.2-fork.1", package = "libmpv-sirno", optional = true } # Works with mpv v0.35

# Player: tori-player
tori-player = { path = "../tori-player", version = "0.1.0", optional = true }

[build-dependencies]
winres = "0.1"

